infrastructure/k8s/monitoring_v2/opentelemetry-collector-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-collector-k8s
  namespace: monitoring
  labels:
    app: opentelemetry-collector-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetry-collector-k8s
  template:
    metadata:
      labels:
        app: opentelemetry-collector-k8s
    spec:
      serviceAccountName: opentelemetry-collector-k8s
      containers:
        - name: opentelemetry-collector-k8s
          image: docker.santelos.com/opentelemetry-collector-k8s
          imagePullPolicy: Always
