infrastructure/k8s/monitoring_v2/clickhouse.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: clickhouse
  namespace: monitoring
spec:
  replicas: 1
  serviceName: clickhouse
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server
          ports:
            - containerPort: 8123
            - containerPort: 9000
          volumeMounts:
            - mountPath: /var/lib/clickhouse
              name: clickhouse-data-volume-claim
              subPath: data
            - mountPath: /var/log/clickhouse-server
              name: clickhouse-data-volume-claim
              subPath: logs
  volumeClaimTemplates:
    - metadata:
        name: clickhouse-data-volume-claim
        labels:
          app: clickhouse
      spec:
        storageClassName: local-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: monitoring
  labels:
    app: clickhouse
spec:
  selector:
    app: clickhouse
  ports:
  - name: http
    protocol: TCP
    port: 8123
    targetPort: 8123
  - name: native
    protocol: TCP
    port: 9000
    targetPort: 9000
