infrastructure/k8s/monitoring_v2/grafana-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana-db
  namespace: monitoring
spec:
  replicas: 1
  serviceName: grafana-db
  selector:
    matchLabels:
      app: grafana-db
  template:
    metadata:
      labels:
        app: grafana-db
    spec:
      containers:
        - name: grafana-db
          image: postgres:14
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: grafana-db-volume-claim
              subPath: postgres-data
  volumeClaimTemplates:
    - metadata:
        name: grafana-db-volume-claim
        labels:
          app: grafana-db
      spec:
        storageClassName: local-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-db
  namespace: monitoring
  labels:
    app: grafana-db
spec:
  selector:
    app: grafana-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
