infrastructure/k8s/monitoring_v2/opentelemetry-collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: opentelemetry-collector
  namespace: monitoring
  labels:
    app: opentelemetry-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry-collector
  template:
    metadata:
      labels:
        app: opentelemetry-collector
    spec:
      serviceAccountName: opentelemetry-collector
      containers:
      - name: opentelemetry-collector
        image: docker.santelos.com/opentelemetry-collector
        ports:
        - containerPort: 4317
        - containerPort: 55679
        livenessProbe:
          httpGet:
            path: "/health/status"
            port: 13133
          initialDelaySeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: "/health/status"
            port: 13133
          initialDelaySeconds: 5
          failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-collector
  namespace: monitoring
spec:
  selector:
    app: opentelemetry-collector
  ports:
  - protocol: TCP
    name: "grpc-receiver"
    port: 4317
    targetPort: 4317
  - protocol: TCP
    name: "zpages-extension"
    port: 55679
    targetPort: 55679
