infrastructure/k8s/monitoring_v2/grafana.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: grafana
#   namespace: monitoring
#   labels:
#     app: grafana
# type: Opaque
# data:
#   DATABASE__PASSWORD: ""
#   ADMIN__EMAIL: ""
#   SECRET_KEY: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0  
      containers:
      - name: grafana
        image: docker.santelos.com/grafana
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: 200Mi
            cpu: 50m
          requests:
            memory: 200Mi
            cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "grafana.santelos.com"
    secretName: grafana-santelos-cert
  rules:
  - host: grafana.santelos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
